--- a/style2.css
+++ b/style2.css
@@ -53,13 +53,17 @@ section {
     cursor: default;
 }
 
+.navbar {
+    margin-right: 6rem;
+}
+
 .navbar.active {
         display: block;
         animation: slideDown 0.3s ease-out;
     }
 
 .navbar a {
-    font-size: 1.5rem;
+    font-size: 1.5vw;
     color: var(--text-color);
     margin-left: 4rem;
     font-weight: 700;
@@ -67,6 +71,30 @@ section {
 
 .navbar a:hover,
 .navbar a.active {
+    color: var(--main-color);
+}
+
+.lang {
+    display: flex;
+    align-items: right;
+    gap: 1.5rem;
+}
+
+.lang.active {
+        display: block;
+        animation: slideDown 0.3s ease-out;
+    }
+
+.lang a {
+    font-size: 1.85rem;
+    color: var(--text-color);
+    margin-left: 0.2vw;
+    margin-right: 0.5vw;
+    font-weight: 700;
+}
+
+.lang a:hover,
+.lang a.active {
     color: var(--main-color);
 }
 
