--- a/style2.css
+++ b/style2.css
@@ -394,6 +394,9 @@ span {
 
 /* ===== PROJECTS SECTION ===== */
 .projects {
+    justify-content: center;
+    align-items: center;
+    margin-top: 5rem;
     background: var(--snd-bg-color);
 }
 
@@ -408,6 +411,7 @@ span {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(35rem, 1fr));
     gap: 4rem;
+    margin-bottom: 5rem;
 }
 
 .project-card {
@@ -432,6 +436,40 @@ span {
     justify-content: center;
     font-size: 8rem;
     color: white;
+}
+
+.project-img2 {
+    width: 100%;
+    height: 25rem;
+    background-color: #F4F4F4;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 8rem;
+    color: white;
+}
+
+.project-img2 img.project-screenshot {
+    max-width: 100%;
+    max-height: 100%;
+    margin: auto;
+    align-content: left;
+    border-radius: 0px;
+    box-shadow: 0 4px 24px rgba(0,0,0,0.10);
+    object-fit: contain;
+    background: transparent;
+    width: max-content;
+}
+
+.project-img2 img.page-screenshot {
+    max-width: 110%;
+    max-height: 110%;
+    margin-top: 0.4rem;
+    border-radius: 0px;
+    box-shadow: 0 4px 24px rgba(0,0,0,0.10);
+    object-fit: contain;
+    background: transparent;
+    width: max-content;
 }
 
 .project-content {
@@ -519,6 +557,7 @@ span {
 .experience-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-bottom: 5rem;
     gap: 6rem;
 }
 
@@ -627,6 +666,7 @@ span {
 .contact-container {
     display: grid;
     grid-template-columns: 1fr 1fr;
+    margin-bottom: 5rem;
     gap: 6rem;
     align-items: start;
 }
